--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
     "node": ">=4.0.0"
   },
   "scripts": {
+    "postinstall" : "npm install -g grunt",
     "start": "grunt build && grunt upload",
+
     "test": "grunt test",
     "lint": "eslint ./"
   },
@@ -25,8 +27,6 @@
     "express": "^4.13.4",
     "express-partials": "^0.2.0",
     "express-session": "^1.13.0",
-    "grunt": "^0.4.4",
-    "grunt-contrib-concat": "^1.0.0",
     "grunt-contrib-cssmin": "^1.0.1",
     "grunt-contrib-uglify": "^1.0.1",
     "grunt-contrib-watch": "^1.0.0",
@@ -41,6 +41,8 @@
     "sqlite3": "~3.1.1"
   },
   "devDependencies": {
+    "grunt": "^0.4.5",
+    "grunt-contrib-concat": "^1.0.1",
     "supertest": "^1.2.0"
   }
 }
